fix(Elife): Remove wrong margin

--- a/src/themes/elife/styles.css
+++ b/src/themes/elife/styles.css
@@ -228,7 +228,6 @@
   ol {
     counter-reset: item;
     list-style-type: none;
-    margin-left: 1.5rem;
 
     li:--reference {
       display: block;
